[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Worlds/World1/World1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pads/Pad_01_1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Worlds/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Worlds/WorldCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_01.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 120, 169 )

[node name="World1Root" type="Node2D"]
script = ExtResource( 1 )

[node name="World1Area" type="Area2D" parent="."]
position = Vector2( 0, 10 )

[node name="World" type="Sprite" parent="World1Area"]
position = Vector2( 156.499, 461.336 )
scale = Vector2( 0.304342, 0.554523 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="WorldCamera" type="Camera2D" parent="World1Area/World"]
position = Vector2( 438.655, 87.7583 )
scale = Vector2( 3.28578, 1.80335 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="World1Area/World/WorldCamera"]

[node name="Sprite" type="Sprite" parent="World1Area/World"]
position = Vector2( -10.9755, -243.966 )
scale = Vector2( 1.59423, 0.953899 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World1Area"]
position = Vector2( 150, 400 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="input_event" from="World1Area" to="." method="_on_World1Area_input_event"]
